# Kelvin_STEM

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
Kelvin_STEM/: __init__.py
Kelvin_STEM/file_handling/: __init__.py  directorylisting.py
Kelvin_STEM/io/: __init__.py  read.py
Kelvin_STEM/process/: __init__.py  polar.py
