[project]
name = "example_package_YOUR_USERNAME_HERE"
version = "0.0.1"
authors = [
  { name="Ian MacLaren", email="ian.maclaren@glasgow.ac.uk" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.19",
    "scipy >= 1.5.2",
    "h5py >= 3.2.0",
    "hdf5plugin >= 4.1.3",
    "matplotlib >= 3.2.2",
    "tqdm >= 4.46.1",

]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/maclariz/Kelvin_STEM/"
Issues = "https://github.com/maclariz/Kelvin_STEM/issues"
